objects/Presales_IT_Ticket__c.object
<CustomObject>
    <description>Presales IT Help Desk Tickets</description>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Presales_Number__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_In__c</fullName>
        <label>Issue In</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Logged__c</fullName>
        <label>Issue Logged</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Names__c</fullName>
        <label>Label Names</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presales_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presales Number</label>
        <referenceTo>Presales__c</referenceTo>
        <relationshipLabel>Presales IT Tickets</relationshipLabel>
        <relationshipName>Presales_IT_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presales_Stage__c</fullName>
        <formula>TEXT(Presales_Number__r.Current_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Instance__c</fullName>
        <label>Product Instance</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Reporter__c</fullName>
        <formula>Presales_Number__r.Solutions_Architect__r.FirstName + &apos; &apos; +  Presales_Number__r.Solutions_Architect__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Reporter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Presales IT Ticket</label>
    <nameField>
        <displayFormat>PIT-{000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales IT Tickets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>